# tensorrt_mmlab

./: CMakeLists.txt  README.md  main.cpp  trt_dynamic_resize.cpp
include/: trt_dynamic_resize.h  trt_plugin_base.hpp
